--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<div>
+	    <p>First paragraph</p>
+	    <p>lorem</p>
+		<p>lorem</p>
+	</div>
+	<div>
+		<ul>
+			<li>First Item</li>
+			<li>Second Item</li>
+			<li>Third Item</li>
+			<li>Fourth Item</li>
+			<li>Fifth Item</li>
+		</ul>
+	</div>
 </body>
 
 </html>
