--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 </script>
 	<div>
 	    <p>First paragraph</p>
-	    <p>lorem</p>
-		<p>lorem</p>
-		<p>lorem</p>
+	    <p>lorem fddfsdfdsfds</p>
+		<p>lorem fmbjhfjahfkahd</p>
+		<p>lorem mnbjashfjhadhakdh</p>
 	</div>
 	
 		<ul>
