--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<div>
+	<article>
 	    <p>First paragraph</p>
 	    <p>lorem fddfsdfdsfds</p>
 		<p>lorem fmbjhfjahfkahd</p>
 		<p>lorem mnbjashfjhadhakdh</p>
-	</div>
+	</article>
 	
 		<ul>
 			<li>First Item</li>
